syntax = "proto3";

package jwks;

import "google/protobuf/any.proto";


message GetJWKSRequest {}

message GetJWKSResponse {
  string jwks = 1;
}

